# Scholar-AI

./: .env.example  .gitignore  README.md  ask.py  chat.py  conftest.py  final_validation.py  pyproject.toml  pytest.ini  run.sh  run_tests.py  streamlit_app.py
.claude/: settings.local.json
config/: config.yaml
data/vectorstore/: faiss.index  metadata.json
data/vectorstore/langchain_faiss/: faiss.index  index.faiss  metadata.json
src/app/: __init__.py  cli_chat.py  streamlit_chat.py
src/ingestion/: __init__.py  pdf_parser.py  test_pdf_load.py
src/llm/: __init__.py  prompts.py  qa_chain.py
src/retrieval/: __init__.py  langchain_retriever.py  retriever_utils.py
src/vectorstore/: __init__.py  embeddings.py  vector_store.py
tests/: README.md  __init__.py  test_custom_prompts.py  test_langchain_retrieval.py  test_pdf_processing.py  test_pdf_processing_pytest.py  test_prompt_comparison.py  test_qa_pipeline.py  test_qa_system.py  test_streamlit_components.py  test_vector_store.py
