[project]
name = "ai-research-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Vikrant Rajput",email = "iamvikranrajput@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "streamlit (>=1.47.1,<2.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "openai (>=1.97.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "unstructured (>=0.18.11,<0.19.0)",
    "cohere (>=5.16.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest = "^8.4.1"

